--- a/NonCrossingLinesDrawer/MainWindow.xaml
+++ b/NonCrossingLinesDrawer/MainWindow.xaml
@@ -5,7 +5,43 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NonCrossingLinesDrawer"
         mc:Ignorable="d"
+        FontFamily="Courier New"
         Title="NonCrossingLineDrawer" Height="800" Width="800">
-    <Grid Name="mainGrid">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+
+        <GroupBox Grid.Row="0" Header="Drawing area" Margin="5" BorderThickness="3" BorderBrush="LightGray" FontSize="14" FontWeight="SemiBold">
+            <Grid Name="mainGrid" Cursor="Pen" SnapsToDevicePixels="True"/>
+        </GroupBox>
+
+        <StatusBar Grid.Row="1" Background="LightGray" FontFamily="Courier New">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="30"/>
+                </Grid.ColumnDefinitions>
+
+                <Label Content="First point: " Margin="5" FontWeight="Bold" FontSize="14" Grid.Column="0"/>
+                <Label Content="Second point: " Margin="5" FontWeight="Bold" FontSize="14" Grid.Column="2"/>
+
+                <Label Name="firstPointLabel" Margin="5" FontWeight="SemiBold" FontSize="14" Grid.Column="1"/>
+                <Label Name="secondPointLabel" Margin="5" FontWeight="SemiBold" FontSize="14" Grid.Column="3"/>
+
+                <Label Content ="Line width:" Margin="5" FontWeight="Bold" FontSize="14" Grid.Column="5"/>
+                <Label Name="lineWidthLabel" Margin="5" FontWeight="SemiBold" FontSize="14" Grid.Column="6"/>
+
+                <Canvas Name="lineColor" Margin="5" Height="30" Width="30" Grid.Column="7"/>
+            </Grid>
+        </StatusBar>
     </Grid>
+
 </Window>
